Added a dark theme toggle button

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 					<a href="#" class="logo">Blood Bridge</a>
 					<nav class="navbar container" data-navbar>
 						<ul class="navbar-list">
+							<button id="theme-toggle">Toggle Mode</button>
 							<li>
 								<a
 									href="index.html"
