Organized php files into folder
Fixed the navigation problem in some page navigation bar

--- a/code/about.html
+++ b/code/about.html
@@ -127,7 +127,7 @@
 							</li>
 							<li>
 								<a
-									href="#service"
+									href="index.html#service"
 									class="navbar-link"
 									data-nav-link
 									>Find donor</a
@@ -143,7 +143,7 @@
 							</li>
 							<li>
 								<a
-									href="#blog"
+									href="index.html#blog"
 									class="navbar-link"
 									data-nav-link
 									>Blog</a
@@ -151,7 +151,7 @@
 							</li>
 							<li>
 								<a
-									href="contact.php"
+									href="php/contact.php"
 									class="navbar-link"
 									data-nav-link
 									>Contact</a
@@ -159,7 +159,7 @@
 							</li>
 						</ul>
 					</nav>
-					<a href="register.php" class="btn">Login / Register</a>
+					<a href="php/register.php" class="btn">Login / Register</a>
 					<button
 						class="nav-toggle-btn"
 						aria-label="Toggle menu"
@@ -482,13 +482,13 @@
 							</a>
 						</li>
 						<li>
-							<a href="contact.php" class="footer-link">
+							<a href=php/"contact.php" class="footer-link">
 								<ion-icon name="add-outline"></ion-icon>
 								<span class="span">Contact</span>
 							</a>
 						</li>
 						<li>
-							<a href="login.php" class="footer-link">
+							<a hrephp/f="login.php" class="footer-link">
 								<ion-icon name="add-outline"></ion-icon>
 								<span class="span">Login / Register</span>
 							</a>
