--- a/code/index.html
+++ b/code/index.html
@@ -145,7 +145,7 @@
 							</li>
 							<li>
 								<a
-									href="contact.php"
+									href="php/contact.php"
 									class="navbar-link"
 									data-nav-link
 									>Contact</a
@@ -153,7 +153,7 @@
 							</li>
 						</ul>
 					</nav>
-					<a href="register.php" class="btn">Login / Register</a>
+					<a href="php/register.php" class="btn">Login / Register</a>
 					<button
 						class="nav-toggle-btn"
 						aria-label="Toggle menu"
@@ -769,13 +769,13 @@
 							</a>
 						</li>
 						<li>
-							<a href="contact.php" class="footer-link">
+							<a href="php/contact.php" class="footer-link">
 								<ion-icon name="add-outline"></ion-icon>
 								<span class="span">Contact</span>
 							</a>
 						</li>
 						<li>
-							<a href="login.php" class="footer-link">
+							<a href="php/login.php" class="footer-link">
 								<ion-icon name="add-outline"></ion-icon>
 								<span class="span">Login / Register</span>
 							</a>
