--- a/code/index.html
+++ b/code/index.html
@@ -153,7 +153,7 @@
 							</li>
 						</ul>
 					</nav>
-					<a href="php/register.php" class="btn">Login / Register</a>
+					<a href="login.html"btn">Login / Register</a>
 					<button
 						class="nav-toggle-btn"
 						aria-label="Toggle menu"
@@ -891,6 +891,8 @@
 
 		<!--custom js link-->
 		<script src="./assets/js/script.js" defer></script>
+		<script src="./assets/js/connections.js" ></script>
+		<script src="./assets/js/lohout.js" ></script>
 		<!--ionicon link-->
 		<script
 			type="module"
